01-security/kyverno/policies/requireresourcelimit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: containers-must-have-resources
      match:
        resources:
          kinds: ["Pod", "Deployment", "StatefulSet", "DaemonSet"]
      validate:
        message: "Each container must declare CPU and memory requests and limits."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - resources:
                      requests:
                        cpu: "?*"
                        memory: "?*"
                      limits:
                        cpu: "?*"
                        memory: "?*"
